[project]
name = "odysya"
version = "0.1.0"
description = "Planner for Odysya"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "groq>=0.31.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "langchain-google-genai>=2.1.10",
    "langchain-groq>=0.3.8",
    "langgraph>=0.6.7",
    "langgraph-supervisor>=0.0.29",
    "langsmith>=0.4.27",
    "logger>=1.4",
    "mcp>=1.13.1",
    "pydantic>=2.11.7",
]
